--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "AirDrop optimization contract",
   "main": "test.sh",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "combine": "combine-contracts AirDrop",
+    "compile": "./scripts/compile.sh"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/MyWishPlatform/airdrop-contract.git"
+    "url": "git+ssh://git@github.com/MyWishPlatform/tron-airdrop-contract.git"
   },
   "keywords": [
     "solidity",
@@ -17,24 +18,25 @@
     "airdrop",
     "tokens"
   ],
-  "author": "Val Dubrava",
+  "authors": [
+    "Val Dubrava",
+    "Nikolay Toporkov",
+    "Maksim Strenk"
+  ],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MyWishPlatform/airdrop-contract/issues"
+    "url": "https://github.com/MyWishPlatform/tron-airdrop-contract/issues"
   },
-  "homepage": "https://github.com/MyWishPlatform/airdrop-contract#readme",
+  "homepage": "https://github.com/MyWishPlatform/tron-airdrop-contract#readme",
   "dependencies": {
-    "@machinomy/types-truffle": "https://github.com/machinomy/types-truffle",
-    "csv": "^3.1.0",
-    "ganache-cli": "^6.1.3",
-    "openzeppelin-solidity": "^1.10.0",
-    "sc-library": "github:MyWishPlatform/sc-library#feature/erc223-mintable",
-    "solc": "^0.4.24",
-    "truffle": "^4.1.11",
-    "web3": "^1.0.0-beta.34"
+    "c-preprocessor": "^0.2.12",
+    "csv": "5.1.1",
+    "openzeppelin-solidity": "1.10.0",
+    "sc-library": "github:MyWishPlatform/sc-library#0.7.1",
+    "tronbox": "^2.3.11"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "4.2.0",
     "chai-as-promised": "^7.1.1"
   }
 }
