--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "c-preprocessor": "^0.2.12",
     "csv": "5.1.1",
     "openzeppelin-solidity": "1.10.0",
-    "sc-library": "github:MyWishPlatform/sc-library#0.7.1",
-    "tronbox": "^2.3.11"
+    "sc-library": "github:MyWishPlatform/sc-library#0.7.2",
+    "tronbox": "^2.7.14"
   },
   "devDependencies": {
-    "chai": "4.2.0",
+    "chai": "^4.1.0",
     "chai-as-promised": "^7.1.1"
   }
 }
